[package]
name = "srestricted"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/DrSloth/srestricted"
home = "https://github.com/DrSloth/srestricted"
keywords = ["collections", "utility"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc"]
impl_serde = ["serde"]

default = ["std", "impl_serde"]

[dependencies]
serde = { version = "^1", default-features=false, features = ["derive"], optional=true}
