[package]
name = "srestricted"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/DrSloth/srestricted"
home = "https://github.com/DrSloth/srestricted"
keywords = ["collections", "utility"]
description = "A library to manage size restricted Rust collections"
license = "MIT"
readme = "README.md"

[features]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc"]
impl_serde = ["serde"]

default = ["std", "impl_serde"]

[dependencies]
serde = { version = "1.0.152", default-features=false, features = ["derive"], optional=true}
